support chunked gpx loading

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
     <h1>Web Component - Digiway Data</h1>
     <div class="widget-container">
       <!-- with centering -->
-      <map-widget source="civis.geoserver.hikingtrails" language="de" pagesize="50"></map-widget>      
+      <map-widget source="dservices3.arcgis.com.radrouten_tirol,civis.geoserver.mountainbikeroutes" language="de" pagesize="500"></map-widget>      
     </div>
     <hr />    
     <script src="map_widget.js"></script>    
