adding lint and prettier, format code, cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,23 @@ SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>
 SPDX-License-Identifier: AGPL-3.0-or-later
 -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Web Component - Digiway Data</title>    
+    <title>Web Component - Digiway Data</title>
   </head>
   <body>
     <h1>Web Component - Digiway Data</h1>
     <div class="widget-container">
       <!-- with centering -->
-      <map-widget source="dservices3.arcgis.com.radrouten_tirol,civis.geoserver.mountainbikeroutes" language="de" pagesize="500"></map-widget>      
+      <map-widget
+        source="dservices3.arcgis.com.radrouten_tirol,civis.geoserver.mountainbikeroutes"
+        language="de"
+        pagesize="500"
+      ></map-widget>
     </div>
-    <hr />    
-    <script src="map_widget.js"></script>    
+    <hr />
+    <script src="map_widget.js"></script>
   </body>
 </html>
