--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
     <div class="widget-container">
       <!-- with centering -->
       <map-widget
-        source="dservices3.arcgis.com.radrouten_tirol,civis.geoserver.mountainbikeroutes"
+        source=""        
         language="de"
         pagesize="500"
       ></map-widget>
